@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
     'description' => 'This generates a PHP debug output file. And this is a sys_log and devLog data logger',
     'category' => 'misc',
     'shy' => 0,
-    'version' => '0.6.4',
+    'version' => '0.6.5',
     'dependencies' => '',
     'conflicts' => '',
     'priority' => '',
